crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__list__missing_closing_bracket_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/list/missing_closing_bracket_0.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..43,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 42..43,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 42..43,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 43..43,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Missing closing bracket 0: No elements
2 | 
3 | [
  |   Syntax Error: unexpected EOF while parsing
  |
