crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__list__missing_closing_bracket_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/list/missing_closing_bracket_1.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..133,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 125..133,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 125..133,
                            elts: [
                                BinOp(
                                    ExprBinOp {
                                        node_index: NodeIndex(None),
                                        range: 128..133,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 128..129,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 132..133,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | [
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
